@@ -2,6 +2,8 @@
 
  * src/ao_tasks.c:
    Move the code for creating a new task into create_task().
+   Strip the token from the displayed task description to be closer
+   to the initial implementation (closes #2925003).
 
 
 2010-01-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
